Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7584

QComboBox drawn incorrectly in RightToLeft mode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.2
    • 4.6.1
    • GUI: Look'n'Feel
    • None
    • 78bb23107d9fcde431cd2ba83c1a9e9886b6d51a

    Description

      When setting the application's layout direction to

      QApplication::setLayoutDirection(Qt::RightToLeft);

      ...The QComboBox is drawn incorrectly. I assume it is the QS60Style. See the attached screenshot and test app.

      Attachments

        1. ArabicTextRtl.jpg
          50 kB
          Alessandro Portale
        2. arabictext_rtl.zip
          2 kB
          Alessandro Portale

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              samimeri Sami Merila (Inactive)
              portale Alessandro Portale
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes