QComboBox drawn incorrectly in RightToLeft mode

QS60Style does not regard layout orientation when calculating subrects
for QComboBox. This leads to a situation where button is not visible
on UI with RightToLeft orientation.

Task-number: QTBUG-7584
Reviewed-by: Alessandro Portale